template: main: fixed line wrap issues in css

--- a/static/mealy/style.css
+++ b/static/mealy/style.css
@@ -79,7 +79,7 @@ nav li a {
 
 div.mealln {
   height: 1.3rem;
-  max-width: 8.5rem;
+  max-width: 9rem;
   position: absolute;
 }
 
@@ -91,7 +91,7 @@ progress, progress[role] {
   -webkit-appearance: none;
   display: inline-block;
   background-size: auto;
-  width: 5rem;
+  width: 6rem;
 	height: 2px;
   border: 0;
   margin: 0;
